# lidar_auto_docking

./: CMakeLists.txt  package.xml
include/lidar_auto_docking/: autodock.h  controller.h  dock_candidate.h  icp_2d.h  laser_processor.h  linear_pose_filter_2d.h  perception.h  tf2listener.h
initial_dock_pose/: init_dock.json
launch/: autodock.launch  dock_robot.launch  dock_saver.launch  nav2_dock.launch  undock_robot.launch
scripts/: dock_robot.py  dock_saver.py  nav2_dock.py  undock_robot.py
src/: autodock.cpp  controller.cpp  dock_coordinates.cpp  icp_2d.cpp  laser_processor.cpp  linear_pose_filter_2d.cpp  perception.cpp  tf2listener.cpp
